¡Quiero vender más!

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -64,7 +64,7 @@
                 <b>canal de Ventas Nº1
                     <br> para empresas en México.</b>
             </h2>
-            <a class="waves-effect orange darken-1 waves-light btn-large" style="text-transform: unset;" href="#contacto">Contáctame</a>
+            <a id="vender" class="btn-large" href="#contacto">¡Quiero vender más!</a>
         </div>
         <div class="col s12 m6 s6">
             <img id="phonee" class="animated fadeInLeft" src="https://drive.google.com/uc?id=1UICk8GEZYSh2Stm211OB-JUixarzmKGN" alt="">
